@@ -304,3 +304,5 @@ in 0.1.13.
 - Fully remove traces from graph when opening new experiments.
 - Store reduction_options when processing spectra.
 - RuntimeError if a log transform creates non-finite numbers.
+- ReflectModels can now use a q_offset to correct for possible angular
+  misalignments.
